--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,7 +25,7 @@ services:
             - ../app:/var/www/app
             - ./nginx/logs/:/var/log/nginx
             - ./nginx/config/nginx.conf:/etc/nginx/nginx.conf
-            - ./nginx/config/symfony.conf:/etc/nginx/sites-available/app.conf
+            - ./nginx/config/app.conf:/etc/nginx/sites-available/app.conf
         networks:
             - app-network
         env_file:
@@ -73,6 +73,17 @@ services:
             - app-network
         env_file:
             - ../app.env
+    node:
+        container_name: node-app
+        build: node
+        image: node:app
+        tty: true
+        volumes:
+            - ../app:/var/www/app
+        networks:
+            - app-network
+        ports:
+          - 3000:3000
 
 networks:
     app-network:
